Thêm chức năng mua hàng, gửi mail cho khách hàng.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -126,7 +126,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_category_product">
                         <div class="single_category_img">
-                            <a asp-controller="Product" asp-action="Detail" asp-route-id="@item.MaSp" asp-route-name="@item.TenSp"><img src="~/images/@item.HinhAnh" alt=""></a>
+                            <a asp-controller="Home" asp-action="Detail" asp-route-id="@item.MaSp" asp-route-name="@item.TenSp"><img src="~/images/@item.HinhAnh" alt=""></a>
                             <div class="category_social_icon">
                                 <ul>
                                     <li><a href="#"><i class="ti-heart"></i></a></li>
