--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -103,7 +103,7 @@
                         </div>
                     }
                     <div class="col-lg-12 text-center">
-                        <a href="#" class="btn_2">More Items</a>
+                        <a asp-action="Add" asp-controller="Product" asp-area="Admin" class="btn_2">More Items</a>
                     </div>
                 </div>
             </div>
