--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -5,37 +5,37 @@
 }
 
 @*<h1>Cart Page</h1>
-<table class="table-bordered table">
-    <tr>
-        <th>Option</th>
-        <th>MaSp</th>
-        <th>TenSp</th>
-        <th>HinhAnh</th>
-        <th>Gia</th>
-        <th>SoLuong</th>
-        <th>Tong cong</th>
-    </tr>
-    @foreach (var item in ViewBag.cart)
-    {
+    <table class="table-bordered table">
         <tr>
-            <td><a asp-controller="cart" asp-action="Remove" asp-route-id="@item.SanPham.MaSp">Remove</a></td>
-            <td>@item.SanPham.MaSp</td>
-            <td>@item.SanPham.TenSp</td>
-            <td><img src="~/images/@item.SanPham.HinhAnh" width="60" height="60" /></td>
-            <td>@item.SanPham.Gia</td>
-            <td>@item.SoLuong</td>
-            <td>@(item.SanPham.Gia * item.SoLuong)</td>
+            <th>Option</th>
+            <th>MaSp</th>
+            <th>TenSp</th>
+            <th>HinhAnh</th>
+            <th>Gia</th>
+            <th>SoLuong</th>
+            <th>Tong cong</th>
         </tr>
-    }
-    <tr>
-        <td align="right" colspan="6">
-            Sum
-        </td>
-        <td>@ViewBag.total</td>
-    </tr>
-</table>
-<br />
-<a asp-action="Index" asp-controller="Product">Continue Shopping</a>*@
+        @foreach (var item in ViewBag.cart)
+        {
+            <tr>
+                <td><a asp-controller="cart" asp-action="Remove" asp-route-id="@item.SanPham.MaSp">Remove</a></td>
+                <td>@item.SanPham.MaSp</td>
+                <td>@item.SanPham.TenSp</td>
+                <td><img src="~/images/@item.SanPham.HinhAnh" width="60" height="60" /></td>
+                <td>@item.SanPham.Gia</td>
+                <td>@item.SoLuong</td>
+                <td>@(item.SanPham.Gia * item.SoLuong)</td>
+            </tr>
+        }
+        <tr>
+            <td align="right" colspan="6">
+                Sum
+            </td>
+            <td>@ViewBag.total</td>
+        </tr>
+    </table>
+    <br />
+    <a asp-action="Index" asp-controller="Product">Continue Shopping</a>*@
 
 <!-- breadcrumb start-->
 <section class="breadcrumb breadcrumb_bg">
@@ -107,10 +107,10 @@
                             <td></td>
                             <td></td>
                             @*<td>
-                                <div class="cupon_text float-right">
-                                    <a class="btn_1" href="#">Update Cart</a>
-                                </div>
-                            </td>*@
+                                    <div class="cupon_text float-right">
+                                        <a class="btn_1" href="#">Update Cart</a>
+                                    </div>
+                                </td>*@
                         </tr>
                         <tr>
                             <td></td>
@@ -126,7 +126,14 @@
                 </table>
                 <div class="checkout_btn_inner float-right">
                     <a class="btn_1" asp-action="Index" asp-controller="Home">Continue Shopping</a>
-                    <a class="btn_1 checkout_btn_1" href="#">Proceed to checkout</a>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <a class="btn_1 checkout_btn_1" asp-action="CheckOutWithSignIn" asp-controller="Cart">Proceed to checkout</a>
+                    }
+                    else
+                    {
+                        <a class="btn_1 checkout_btn_1" asp-action="AddInformation" asp-controller="Cart">Proceed to checkout</a>
+                    }
                 </div>
             </div>
         </div>
