--- a/Views/Shared/_UserLayout.cshtml
+++ b/Views/Shared/_UserLayout.cshtml
@@ -47,9 +47,10 @@
                         </button>
 
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
+                           
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a>
+                                    <a class="nav-link" asp-controller="Home" asp-action="Index">Trang chủ</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1"
@@ -70,10 +71,23 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Liên hệ</a>
                                 </li>
+                                <partial name="_LoginPartial" />
+                                @if (User.Identity.IsAuthenticated)
+                                {
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
+                                    </li>
+                                }
+                                else
+                                {
+                                    <li class="nav-item">
+                                        <a class="nav-link" asp-action="Login" asp-controller="Account">Đăng nhập</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" asp-action="Register" asp-controller="Account">Đăng ký</a>
+                                    </li>
 
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Đăng nhập</a>
-                                </li>
+                                }
                             </ul>
                         </div>
                         <div class="hearer_icon d-flex">
@@ -202,6 +216,11 @@
     <script src="~/js/mail-script.js"></script>
     <!-- custom js -->
     <script src="~/js/custom.js"></script>
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 
 </html>
