--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index"
+            <a class="nav-link text-dark" asp-controller="Account" asp-action="DetailUser"
                title="Welcome">Welcome @User.Identity.Name!</a>
         </li>
         <li class="nav-item">
@@ -16,6 +16,16 @@
 
             </form>
         </li>
+    }
+    else
+    {
+        <li class="nav-item">
+            <a class="nav-link" asp-action="Login" asp-controller="Account">Đăng nhập</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" asp-action="Register" asp-controller="Account">Đăng ký</a>
+        </li>
+
     }
 
 </ul>
