--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -37,8 +37,8 @@
                 <div class="login_part_form">
                     <div class="login_part_form_iner">
                         <h3>
-                            Chào mừng trở lại ! <br>
-                            Hãy đăng nhập ngay
+                            Chào mừng đến với Comic Corner ! <br>
+                            Hãy đăng ký tài khoản của bạn bên dưới
                         </h3>
                         <form class="row contact_form" asp-action="Register" asp-controller="Account" method="post">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
