--- a/Views/Cart/AddInformation.cshtml
+++ b/Views/Cart/AddInformation.cshtml
@@ -72,17 +72,17 @@
                         <div class="col-md-12 form-group ">
                             <input type="text" class="form-control" name="diaChi" placeholder="Địa chỉ" />
                         </div>
-                        <button type="submit" class="btn_3">Đồng ý</button>
+                        <button type="submit" class="btn_3">ĐẶT MUA</button>
                     </form>
                 </div>
                 <div class="col-lg-4">
                     <div class="order_box">
-                        <h2>Your Order</h2>
+                        <h2>NỘI DUNG GIỎ HÀNG</h2>
                         <ul class="list">
                             <li>
                                 <a href="#">
-                                    Product
-                                    <span>Total</span>
+                                    Sản phẩm
+                                    <span>Giá</span>
                                 </a>
                             </li>
                             @foreach (var item in ViewBag.cart)
