--- a/Views/Account/DetailUser.cshtml
+++ b/Views/Account/DetailUser.cshtml
@@ -4,48 +4,90 @@
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
 
-<h1>Thong tin ca nhan</h1>
-<div>
-    <dl>
-        <dt>Họ và tên:</dt>
-        <dd>@ViewBag.user.HoTen</dd>
-        <dt>Email:</dt>
-        <dd>@ViewBag.user.Email</dd>
-        <dt>Số điện thoại:</dt>
-        <dd>@ViewBag.user.PhoneNumber</dd>
-        <dt>Địa chỉ:</dt>
-        <dd>@ViewBag.user.DiaChi</dd>
-    </dl>
-</div>
-<div>
-    <table class="table-bordered table">
-        <tr>
-            <td>Mã hóa đơn</td>
-            <td>Ngày</td>
-            <td>Tổng tiền</td>
-            <td>Trạng thái</td>
-        </tr>
-        @foreach (var item in ViewBag.hoaDon)
-        {
-            <tr>
-                <th>@item.MaHD</th>
-                <th>@item.Ngay</th>
-                <th>@item.TongTien</th>
-                @if (item.TrangThai == null)
-                {
-                    <th>Đang chờ</th>
-                    <th><a asp-controller="Account" asp-action="CancelPurchase" asp-route-id="@item.MaHD" >Hủy</a></th>
-                }
-                @if(item.TrangThai == false)
-                {
-                    <th>Đã hủy</th>
-                }
-                @if(item.TrangThai == true)
-                {
-                    <th>Thành công</th>
-                }
-            </tr>
-        }
+<!-- breadcrumb start-->
+<section class="breadcrumb breadcrumb_bg">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-12">
+                <div class="breadcrumb_iner">
+                    <div class="breadcrumb_iner_item">
+                        <p>Home/User/Details</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- breadcrumb start-->
 
-    </table>
+<br />
+
+<div class="container">
+    <h2 style="text-align:center; font-weight:bold">Thông tin cá nhân</h2>
+    <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8 col-md-12 col-sm-12">
+            <dl class="row">
+                <dt class="col-sm-2">
+                    Họ tên:
+                </dt>
+                <dd class="col-sm-10">
+                    @ViewBag.user.HoTen
+                </dd>
+                <dt class="col-sm-2">
+                    Email:
+                </dt>
+                <dd class="col-sm-10">
+                    @ViewBag.user.Email
+                </dd>
+                <dt class="col-sm-2">
+                    Số điện thoại
+                </dt>
+                <dd class="col-sm-10">
+                    @ViewBag.user.PhoneNumber
+                </dd>
+                <dt class="col-sm-2">
+                    Địa chỉ
+                </dt>
+                <dd class="col-sm-10">
+                    @ViewBag.user.DiaChi
+                </dd>
+            </dl>
+        </div>
+        <div class="col-lg-2"></div>
+    </div>
+    <hr />
+    <h2 style="text-align:center; font-weight:bold">Lịch sử đặt hàng</h2>
+    <div class="container">
+        <table class="table-bordered table">
+            <tr>
+                <td>Mã hóa đơn</td>
+                <td>Ngày</td>
+                <td>Tổng tiền</td>
+                <td>Trạng thái</td>
+            </tr>
+            @foreach (var item in ViewBag.hoaDon)
+            {
+                <tr>
+                    <th>@item.MaHD</th>
+                    <th>@item.Ngay</th>
+                    <th>@item.TongTien</th>
+                    @if (item.TrangThai == null)
+                    {
+                        <th>Đang chờ</th>
+                        <th><a asp-controller="Account" asp-action="CancelPurchase" asp-route-id="@item.MaHD">Hủy</a></th>
+                    }
+                    @if (item.TrangThai == false)
+                    {
+                        <th>Đã hủy</th>
+                    }
+                    @if (item.TrangThai == true)
+                    {
+                        <th>Thành công</th>
+                    }
+                </tr>
+            }
+
+        </table>
+    </div>
 </div>
