--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -66,6 +66,7 @@
                         <h6 class="collapse-header">Các trang:</h6>
                         <a class="collapse-item" asp-controller="Category" asp-action="Index">Thể loại truyện</a>
                         <a class="collapse-item" asp-controller="CartAdmin" asp-action="Index">QL đơn hàng</a>
+                        <a class="collapse-item" asp-controller="User" asp-action="Index">QL người dùng</a>
                     </div>
                 </div>
             </li>
