--- a/Areas/Admin/Views/Product/Add.cshtml
+++ b/Areas/Admin/Views/Product/Add.cshtml
@@ -52,7 +52,7 @@
             <div class="form-group">
                 <input type="submit" value="Thêm sản phẩm" class="btn btn-primary" />
             </div>
-            <a asp-action="Index">Quay vềt</a>
+            <a asp-action="Index">Quay về</a>
         </form>
     </div>
 </div>
