--- a/Views/Account/DetailUser.cshtml
+++ b/Views/Account/DetailUser.cshtml
@@ -24,6 +24,7 @@
 
 <div class="container">
     <h2 style="text-align:center; font-weight:bold">Thông tin cá nhân</h2>
+    <a asp-controller="Account" asp-action="EditUser" class="btn btn-primary">Chỉnh sửa thông tin cá nhân</a>
     <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-8 col-md-12 col-sm-12">
