--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -137,5 +137,6 @@
                 </div>
             </div>
         </div>
+        </div>
 </section>
 <!--================End Cart Area =================-->
