Chỉnh sửa lại các view do hợp với giao diện

--- a/Areas/Admin/Views/Role/Index.cshtml
+++ b/Areas/Admin/Views/Role/Index.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h1>List of Roles</h1>
-<a asp-action="Create" asp-controller="Role">Create</a>
+<h1>Danh sách Quyền hạn</h1>
+<a asp-action="Create" class="btn btn-primary" asp-controller="Role">Thêm mới QH</a>
 <table class="table table-striped table-bordered">
     <thead>
         <tr>
