--- a/Areas/Admin/Views/Coupon/Create.cshtml
+++ b/Areas/Admin/Views/Coupon/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Thêm sản phẩm</h1>
+    <h1 class="h3 mb-0 text-gray-800">Thêm mã giảm giá</h1>
 </div>
 <hr />
 <div class="row">
@@ -26,9 +26,9 @@
                 <span asp-validation-for="NgayKetThuc" class="text-danger"></span>
             </div>
             <div class="form-group row">
-                <label class="col-sm-3 col-form-label">Giá trị</label>
+                <label class="col-sm-3 col-form-label">Giá trị (%)</label>
                 <div class="col-sm-6">
-                    <input asp-for="GiaTri" class="form-control" />%
+                    <input asp-for="GiaTri" class="form-control" />
                 </div>
                 <span asp-validation-for="GiaTri" class="text-danger"></span>
             </div>
