--- a/Areas/Admin/Views/Role/Create.cshtml
+++ b/Areas/Admin/Views/Role/Create.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-<h1>Create Role</h1>
+<h1>Thêm mới Quyền hạn</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
