Thêm chức năng gửi mã coupon cho user, xem chi tiết tổng tiền, chức năng quên mật khẩu, chức năng đổi mật khẩu, admin có thể thêm user và chỉnh sửa thông tin cá nhân của user, xử lý đơn hàng, xử lý lọc sản phẩm

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -92,7 +92,7 @@
                                 @*<button type="submit" value="submit" class="btn_3">
                                         log in
                                     </button>*@
-                                <a class="lost_pass" href="#">Quên mật khẩu?</a>
+                                <a class="lost_pass" asp-action="ForgotPassword" >Quên mật khẩu?</a>
                             </div>
                         </form>
                     </div>
