--- a/Areas/Admin/Views/CartAdmin/Index.cshtml
+++ b/Areas/Admin/Views/CartAdmin/Index.cshtml
@@ -6,11 +6,24 @@
     <h1 class="h3 mb-0 text-gray-800">Tình trạng đơn hàng</h1>
 </div>
 <div class="tab">
-    <button class="tablinks" data-table="#waitHoaDon">Đơn đang đợi</button>
-    <button class="tablinks" data-table="#unpaidHoaDon">Đơn chưa thanh toán</button>
-    <button class="tablinks" data-table="#yetDeliveryHoaDon">Đơn chưa giao hàng</button>
-    <button class="tablinks" data-table="#deliveringHoaDon">Đơn đang giao hàng</button>
-    <button class="tablinks" data-table="#deliveriedHoaDon">Đơn đã giao hàng</button>
+    <form asp-action="Index" asp-controller="CartAdmin">
+        Từ
+        <input type="date" name="ngayBatDau" value="@ViewBag.ngayBatDau" />
+        Đến
+        <input type="date" name="ngayKetThuc" value="@ViewBag.ngayKetThuc" />
+        <select name="option">
+            <option value="1">Tất cả đơn hàng</option>
+            <option value="2">Đơn hàng giao không thành công</option>
+            <option value="3">Đơn hàng giao thành công đã thu tiền</option>
+            <option value="4">Đơn hàng giao thành công chưa thu tiền</option>
+            <option value="5">Đơn hàng đã hủy</option>
+            <option value="6">Đơn hàng đang đợi chấp nhận</option>
+            <option value="7">Đơn hàng chưa giao</option>
+            <option value="8">Đơn hàng đang giao</option>
+        </select>
+
+        <input type="submit" value="Lọc" />
+    </form>
 </div>
 <div class="card-body">
     <div class="table-responsive">
@@ -25,6 +38,7 @@
                     <th>Loại thanh toán</th>
                     <th>Thanh Toán</th>
                     <th>Trạng thái</th>
+                    <th>Giao hàng</th>
                     <th></th>
                     <th></th>
                 </tr>
@@ -33,222 +47,121 @@
                 @*Danh sách hóa đơn đang đợi*@
                 @foreach (var item in ViewBag.waitHoaDon)
                 {
-                    <tr>
-                        <td>@item.MaHD</td>
-                        <td>@item.HoTen</td>
-                        <td>@item.SDT</td>
-                        <td>@item.DiaChi</td>
-                        <td>@item.TongTien</td>
-                        
-                        @if (item.LoaiTT == 2)
-                        {
-                            <td>Paypal</td>
-                        }
-                        else
-                        {
-                            <td>Khi nhận hàng</td>
-                        }
-                        @if (item.TinhTrang == true)
-                        {
-                            <td>Đã thanh toán</td>
-                        }
-                        else
-                        {
-                            <td>Chưa thanh toán</td>
-                        }
-                        @if (item.TrangThai == null)
-                        {
-                            <td>Đang chờ</td>
-                            <td><a asp-action="Accept" asp-controller="CartAdmin" asp-route-id="@item.MaHD">Xác nhận</a></td>
-                            <td><a asp-action="Cancel" asp-controller="CartAdmin" asp-route-id="@item.MaHD">Từ chối</a></td>
-                        }
-                        @if (item.TrangThai == false)
-                        {
-                            <td>Đã hủy</td>
-                        }
-                        @if (item.TrangThai == true)
-                        {
-                            <td>Thành công</td>
-                        }
-                    </tr>
-                }
-            </tbody>
-            <tbody id="unpaidHoaDon">
-                @*Danh sách hóa đơn chưa thanh toán*@
-                @foreach (var item in ViewBag.unpaidHoaDon)
-                {
-                    <tr>
-                        <td>@item.MaHD</td>
-                        <td>@item.HoTen</td>
-                        <td>@item.SDT</td>
-                        <td>@item.DiaChi</td>
-                        <td>@item.TongTien</td>
-                        @if (item.LoaiTT == 2)
-                        {
-                            <td>Paypal</td>
-                        }
-                        else
-                        {
-                            <td>Khi nhận hàng</td>
-                        }
-                        @if (item.TinhTrang == true)
-                        {
-                            <td>Đã thanh toán</td>
-                        }
-                        else
-                        {
-                            <td>Chưa thanh toán</td>
-                        }
-                        @if (item.TrangThai == null)
-                        {
-                            <td>Đang chờ</td>
-                            <td><a asp-action="Accept" asp-controller="CartAdmin" asp-route-id="@item.MaHD">Xác nhận</a></td>
-                            <td><a asp-action="Cancel" asp-controller="CartAdmin" asp-route-id="@item.MaHD">Từ chối</a></td>
-                        }
-                        @if (item.TrangThai == false)
-                        {
-                            <td>Đã hủy</td>
-                        }
-                        @if (item.TrangThai == true)
-                        {
-                            <td>Thành công</td>
-                        }
-                    </tr>
-                }
-            </tbody>
-            <tbody id="yetDeliveryHoaDon">
-                @*Danh sách hóa đơn chưa giao hàng*@
-                @foreach (var item in ViewBag.yetDeliveryHoaDon)
-                {
-                    <tr>
-                        <td>@item.MaHD</td>
-                        <td>@item.HoTen</td>
-                        <td>@item.SDT</td>
-                        <td>@item.DiaChi</td>
-                        <td>@item.TongTien</td>
-                        @if (item.LoaiTT == 2)
-                        {
-                            <td>Paypal</td>
-                        }
-                        else
-                        {
-                            <td>Khi nhận hàng</td>
-                        }
-                        @if (item.TinhTrang == true)
-                        {
-                            <td>Đã thanh toán</td>
-                        }
-                        else
-                        {
-                            <td>Chưa thanh toán</td>
-                        }
-                        @if (item.TrangThai == null)
-                        {
-                            <td>Đang chờ</td>
-                            <td><a asp-action="Accept" asp-controller="CartAdmin" asp-route-id="@item.MaHD">Xác nhận</a></td>
-                            <td><a asp-action="Cancel" asp-controller="CartAdmin" asp-route-id="@item.MaHD">Từ chối</a></td>
-                        }
-                        @if (item.TrangThai == false)
-                        {
-                            <td>Đã hủy</td>
-                        }
-                        @if (item.TrangThai == true)
-                        {
-                            <td>Thành công</td>
-                        }
-                    </tr>
-                }
-            </tbody>
-            <tbody id="deliveringHoaDon">
-                @*Danh sách hóa đơn đang giao hàng*@
-                @foreach (var item in ViewBag.deliveringHoaDon)
-                {
-                    <tr>
-                        <td>@item.MaHD</td>
-                        <td>@item.HoTen</td>
-                        <td>@item.SDT</td>
-                        <td>@item.DiaChi</td>
-                        <td>@item.TongTien</td>
-                        @if (item.LoaiTT == 2)
-                        {
-                            <td>Paypal</td>
-                        }
-                        else
-                        {
-                            <td>Khi nhận hàng</td>
-                        }
-                        @if (item.TinhTrang == true)
-                        {
-                            <td>Đã thanh toán</td>
-                        }
-                        else
-                        {
-                            <td>Chưa thanh toán</td>
-                        }
-                        @if (item.TrangThai == null)
-                        {
-                            <td>Đang chờ</td>
-                            <td><a asp-action="Accept" asp-controller="CartAdmin" asp-route-id="@item.MaHD">Xác nhận</a></td>
-                            <td><a asp-action="Cancel" asp-controller="CartAdmin" asp-route-id="@item.MaHD">Từ chối</a></td>
-                        }
-                        @if (item.TrangThai == false)
-                        {
-                            <td>Đã hủy</td>
-                        }
-                        @if (item.TrangThai == true)
-                        {
-                            <td>Thành công</td>
-                        }
-                    </tr>
-                }
-            </tbody>
-            <tbody id="deliveriedHoaDon">
-                @*Danh sách hóa đơn đã giao*@
-                @foreach (var item in ViewBag.deliveriedHoaDon)
-                {
-                    <tr>
-                        <td>@item.MaHD</td>
-                        <td>@item.HoTen</td>
-                        <td>@item.SDT</td>
-                        <td>@item.DiaChi</td>
-                        <td>@item.TongTien</td>
-                        @if (item.LoaiTT == 2)
-                        {
-                            <td>Paypal</td>
-                        }
-                        else
-                        {
-                            <td>Khi nhận hàng</td>
-                        }
-                        @if (item.TinhTrang == true)
-                        {
-                            <td>Đã thanh toán</td>
-                        }
-                        else
-                        {
-                            <td>Chưa thanh toán</td>
-                        }
-                        @if (item.TrangThai == null)
-                        {
-                            <td>Đang chờ</td>
-                            <td><a asp-action="Accept" asp-controller="CartAdmin" asp-route-id="@item.MaHD">Xác nhận</a></td>
-                            <td><a asp-action="Cancel" asp-controller="CartAdmin" asp-route-id="@item.MaHD">Từ chối</a></td>
-                        }
-                        @if (item.TrangThai == false)
-                        {
-                            <td>Đã hủy</td>
-                        }
-                        @if (item.TrangThai == true)
-                        {
-                            <td>Thành công</td>
-                        }
-                    </tr>
+                <tr>
+                    <td>@item.MaHD</td>
+                    <td>@item.HoTen</td>
+                    <td>@item.SDT</td>
+                    <td>@item.DiaChi</td>
+                    <td>
+                        @item.TongTien
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#hoadon-@item.MaHD">
+                            v
+                        </button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="hoadon-@item.MaHD" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLongTitle">Chi tiết tổng tiền</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Tiền sản phẩm: @item.TamTinh VNĐ</p>
+                                        <p>VAT: @item.VAT VNĐ</p>
+                                        @if (item.MaKhuyenMai != null)
+                                        {
+                                            <p>Giảm giá: @(item.KhuyenMai.GiaTri * item.TamTinh / 100)VNĐ</p>
+                                        }
+                                        <p>Tổng tiền: @item.TongTien VNĐ</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
+
+                    @if (item.LoaiTT == 2)
+                    {
+                        <td>Paypal</td>
+                    }
+                    else
+                    {
+                        <td>Khi nhận hàng</td>
+                    }
+                    @if (item.TinhTrang == true)
+                    {
+                        <td>Đã thanh toán</td>
+                    }
+                    else
+                    {
+                        <td>Chưa thanh toán</td>
+                    }
+                    @if (item.TrangThai == null)
+                    {
+                        <td>Đang chờ</td>
+                    }
+                    @if (item.TrangThai == false)
+                    {
+                        <td>Đã hủy</td>
+                    }
+                    @if (item.TrangThai == true)
+                    {
+                        <td>Thành công</td>
+                    }
+                    @if(item.GiaoHang == 1)
+                    {
+                        <td>Chưa giao hàng</td>
+                    }
+                    else if(item.GiaoHang == 2)
+                    {
+                        <td>Đang giao hàng</td>
+                    }
+                    else if(item.GiaoHang == 3)
+                    {
+                        <td>Đã giao thành công</td>
+                    }
+                    else
+                    {
+                        <td>Giao hàng không thành công</td>
+                    }
+                    <td>
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                ...
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                @if (item.TrangThai == null)
+                                {
+                                    <a class="dropdown-item" asp-action="Accept" asp-controller="CartAdmin" asp-route-id="@item.MaHD" asp-route-option=@ViewBag.option asp-route-ngayBatDau=@ViewBag.ngayBatDau asp-route-ngayKetThuc=@ViewBag.ngayKetThuc >Xác nhận</a>
+                                    <a class="dropdown-item" asp-action="Cancel" asp-controller="CartAdmin" asp-route-id="@item.MaHD" asp-route-option=@ViewBag.option asp-route-ngayBatDau=@ViewBag.ngayBatDau asp-route-ngayKetThuc=@ViewBag.ngayKetThuc>Từ chối</a>
+                                }
+                                @if (item.TinhTrang == false && item.GiaoHang == 3)
+                                {
+                                    <a class="dropdown-item" asp-action="DaThanhToan" asp-controller="CartAdmin" asp-route-id="@item.MaHD" asp-route-option=@ViewBag.option asp-route-ngayBatDau=@ViewBag.ngayBatDau asp-route-ngayKetThuc=@ViewBag.ngayKetThuc>Thanh toán</a>
+                                }
+                                @if (item.GiaoHang == 1 && item.TrangThai == true)
+                                {
+                                    <a class="dropdown-item" asp-action="DangGiaoHang" asp-controller="CartAdmin" asp-route-id="@item.MaHD" asp-route-option=@ViewBag.option asp-route-ngayBatDau=@ViewBag.ngayBatDau asp-route-ngayKetThuc=@ViewBag.ngayKetThuc>Đang giao hàng</a>
+                                }
+                                else if (item.GiaoHang == 2 && item.TrangThai == true)
+                                {
+                                    <a class="dropdown-item" asp-action="GiaoHangThanhCong" asp-controller="CartAdmin" asp-route-id="@item.MaHD" asp-route-option=@ViewBag.option asp-route-ngayBatDau=@ViewBag.ngayBatDau asp-route-ngayKetThuc=@ViewBag.ngayKetThuc>Giao hàng thành công</a>
+                                    <a class="dropdown-item" asp-action="GiaoHangThatBai" asp-controller="CartAdmin" asp-route-id="@item.MaHD" asp-route-option=@ViewBag.option asp-route-ngayBatDau=@ViewBag.ngayBatDau asp-route-ngayKetThuc=@ViewBag.ngayKetThuc>Giao hàng thất bại</a>
+                                }
+                            </div>
+                        </div>
+                    </td>
+                </tr>
                 }
             </tbody>
         </table>
     </div>
 </div>
-@section Scripts{
+@*@section Scripts{
     <script type="text/javascript">
         $(document).ready(function () {
             $('tbody').hide().first().show();
@@ -260,4 +173,4 @@
             })
         })
     </script>
- }
+ }*@
