--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -84,6 +84,13 @@
                 </a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="Revenue" asp-action="Index">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Doanh thu</span>
+                </a>
+            </li>
+
             <!-- Nav Item - Charts -->
             <li class="nav-item">
                 <a class="nav-link" asp-controller="Role" asp-action="Index">
