Chỉnh lại giao diện lần cuối.

--- a/Areas/Admin/Views/Coupon/Index.cshtml
+++ b/Areas/Admin/Views/Coupon/Index.cshtml
@@ -8,54 +8,62 @@
     <h1 class="h3 mb-0 text-gray-800">Danh sách mã giảm giá</h1>
 </div>
 <a asp-controller="Coupon" asp-action="Create" class="btn btn-primary">Thêm Mã Giảm Giá</a>
-<div class="card-body">
-    <div class="table-responsive">
-        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" style="text-align:center">
-            <thead>
-                <tr style="text-align:center">
-                    <th>Mã Giảm Giá</th>
-                    <th>Ngày Bắt Đầu</th>
-                    <th>Ngày Kết Thúc</th>
-                    <th>Giá trị</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @if (Model != null)
-                {
-                    @foreach (var item in Model)
+
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">QL coupon</h6>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>Mã Giảm Giá</th>
+                        <th>Ngày Bắt Đầu</th>
+                        <th>Ngày Kết Thúc</th>
+                        <th>Giá trị</th>
+                        <th></th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    @if (Model != null)
                     {
-                <tr>
-                    <th>@item.Id</th>
-                    <th>@item.NgayBatDau</th>
-                    <th>@item.NgayKetThuc</th>
-                    <th>@item.GiaTri %</th>
-                    <td>
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                ...
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a asp-controller="Coupon" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning">Sửa</a>
-                                <a asp-controller="Coupon" asp-action="SendCoupon" asp-route-id="@item.Id" asp-route-option="1" class="btn btn-outline-warning">Gửi cho tất cả khách hàng thân thiết</a>
-                                <a asp-controller="Coupon" asp-action="SendCoupon" asp-route-id="@item.Id" asp-route-option="2" class="btn btn-outline-warning">Gửi cho khách hàng thẻ vàng</a>
-                                <a asp-controller="Coupon" asp-action="SendCoupon" asp-route-id="@item.Id" asp-route-option="3" class="btn btn-outline-warning">Gửi cho khách hàng thẻ bạch kim</a>
-                                <a asp-controller="Coupon" asp-action="SendCoupon" asp-route-id="@item.Id" asp-route-option="4" class="btn btn-outline-warning">Gửi cho khách hàng thẻ kim cương</a>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>@item.Id</td>
+                                <td>@item.NgayBatDau</td>
+                                <td>@item.NgayKetThuc</td>
+                                <td>@item.GiaTri %</td>
+                                <td>
+                                    <div class="btn-group dropleft">
+                                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            ...
+                                        </button>
+                                        <div class="dropdown-menu" >
+                                            <a class="dropdown-item" asp-controller="Coupon" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning">Sửa</a>
+                                            <a class="dropdown-item" asp-controller="Coupon" asp-action="SendCoupon" asp-route-id="@item.Id" asp-route-option="1" class="btn btn-outline-warning">Gửi cho tất cả khách hàng thân thiết</a>
+                                            <a class="dropdown-item" asp-controller="Coupon" asp-action="SendCoupon" asp-route-id="@item.Id" asp-route-option="2" class="btn btn-outline-warning">Gửi cho khách hàng thẻ vàng</a>
+                                            <a class="dropdown-item" asp-controller="Coupon" asp-action="SendCoupon" asp-route-id="@item.Id" asp-route-option="3" class="btn btn-outline-warning">Gửi cho khách hàng thẻ bạch kim</a>
+                                            <a class="dropdown-item" asp-controller="Coupon" asp-action="SendCoupon" asp-route-id="@item.Id" asp-route-option="4" class="btn btn-outline-warning">Gửi cho khách hàng thẻ kim cương</a>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                        }
                     }
-                }
-            </tbody>
-        </table>
-        @if(ViewBag.status == 1)
-        {
-            <p>
-                Mã khuyến mãi không hợp lệ hoặc đã hết hạn.
-            </p>
-        }
+                </tbody>
+            </table>
+            @if (ViewBag.status == 1)
+            {
+                <p>
+                    Mã khuyến mãi không hợp lệ hoặc đã hết hạn.
+                </p>
+            }
+        </div>
     </div>
 </div>
+
 
 
