--- a/Views/CustomerCate/Index.cshtml
+++ b/Views/CustomerCate/Index.cshtml
@@ -30,28 +30,30 @@
                             <h3>Lọc sản phẩm</h3>
                         </div>
                         <div class="widgets_inner">
-                            <!--<ul class="list">-->
-                                @*<p>Brands</p>*@
-                                <!--<li>
-                                    <input type="radio" aria-label="Radio button for following text input">
-                                    <a asp-controller="CustomerCate" asp-action="SortByName">Theo tên</a>
-                                </li>
-                                <li class="active">
-                                    <input type="radio" aria-label="Radio button for following text input">
-                                    <a asp-controller="CustomerCate" asp-action="SortByPrice">Theo giá (Tăng dần)</a>
-                                </li>
-                                <li class="active">
-                                    <input type="radio" aria-label="Radio button for following text input">
-                                    <a asp-controller="CustomerCate" asp-action="SortByPriceDesc">Theo giá (Giảm dần)</a>
-                                </li>
-                            </ul>-->
+                            
                             <form asp-action="OptionSort" asp-controller="CustomerCate">
-                                <select name="option">
-                                    <option value="1">Theo tên</option>
-                                    <option value="2">Theo giá(tăng dần)</option>
-                                    <option value="3">Theo giá(giảm dần)</option>
-                                </select>
-                                <input type="submit" class="btn btn-primary" value="Lọc" />
+
+                                <ul class="list">
+                                    <li>
+                                        @*<a asp-action="OptionSort" asp-controller="CustomerCate" asp-route-option="1"><input type="radio" aria-label="Radio button for following text input"></a>*@
+                                        <a asp-action="OptionSort" asp-controller="CustomerCate" asp-route-option="1">Lọc theo tên</a>
+                                    </li>
+                                    <li class="active">
+                                        @*<a asp-action="OptionSort" asp-controller="CustomerCate" asp-route-option="2"><input type="radio" aria-label="Radio button for following text input"></a>*@
+                                        <a asp-action="OptionSort" asp-controller="CustomerCate" asp-route-option="2">Theo giá (Tăng dần)</a>
+                                    </li>
+                                    <li class="active">
+                                        @*<a asp-action="OptionSort" asp-controller="CustomerCate" asp-route-option="3"><input type="radio" aria-label="Radio button for following text input"></a>*@
+                                        <a asp-action="OptionSort" asp-controller="CustomerCate" asp-route-option="3">Theo giá (Giảm dần)</a>
+                                    </li>
+                                </ul>
+
+                                @*<select name="option">
+            <option value="1">Theo tên</option>
+            <option value="2">Theo giá(tăng dần)</option>
+            <option value="3">Theo giá(giảm dần)</option>
+        </select>
+        <input type="submit" class="btn btn-primary" value="Lọc" />*@
                             </form>
                         </div>
                     </aside>
