--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -100,7 +100,7 @@
                 <div class="single_feature_post_text">
                     <img src="~/images/feature3.jpg" alt="#" height="400" width="400">
                     <div class="hover_text">
-                        <a asp-action="CateSearchOther"  asp-controller="CustomerCate" class="btn_2">Other</a>
+                        <a asp-action="CateSearchOther" asp-controller="CustomerCate" class="btn_2">Other</a>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <div class="arrival_tittle">
-                            <h2 style="text-align:center">Truyện mới</h2>
+                            <h2 style="text-align:center">Truyện hot</h2>
                         </div>
                     </div>
 
@@ -141,7 +141,12 @@
                                             <a href="#" class="btn btn-active" data-id="@item.MaSp"><i class="ti-heart"></i></a>
                                         }
                                     </li>
-                                    <li><a asp-controller="Cart" asp-action="Buy" asp-route-id="@item.MaSp" asp-route-soLuong="1"><i class="ti-bag"></i></a></li>
+                                    @if (item.SoLuong > 0)
+                                    {
+                                        <li><a asp-controller="Cart" asp-action="Buy" asp-route-id="@item.MaSp" asp-route-soLuong="1"><i class="ti-bag"></i></a></li>
+                                    }
+                                    
+
                                 </ul>
                             </div>
                             <div class="category_product_text">
@@ -156,20 +161,18 @@
                                     {
                                         <span>@item.Gia VNĐ</span>
                                     }
-                            </p>
+                                </p>
 
-                        </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             }
 
 
-            
+
         </div>
     </div>
 
 </section>
 <!--================End Category Product Area =================-->
-
-
