--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -6,10 +6,19 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Account" asp-action="DetailUser"
-               title="Welcome">Welcome @User.Identity.Name!</a>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1"
+               role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Welcome @User.Identity.Name!
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
+                <a class="dropdown-item" asp-controller="Account" asp-action="DetailUser">Thông tin cá nhân</a>
+                <a class="dropdown-item" asp-controller="Account" asp-action="EditUser">Chỉnh sửa TT</a>
+                <a class="dropdown-item" asp-controller="Account" asp-action="ProductFavor">SP yêu thích</a>
+                <a class="dropdown-item" asp-controller="Account" asp-action="ChangePassword">Đổi mật khẩu</a>
+            </div>
         </li>
+
         <li class="nav-item">
             <form class="form-inline" asp-controller="Account" asp-action="Logout" asp-area="">
                 <button type="submit" class="nav-link btn btn-link text-info">Logout</button>
